# myProjects

Latex/: lab1.txt
Logisim/Lab-1/: counter.circ  lfsr.circ  Попович_Виталий_38_1.docx
Python/SHKAFbot/: db  db.db  main.py  sql.py
Python/lab11_physic/: main.py
Python/lab12_physic/: main.py
Python/lab13_physic/: main.py
Python/lab14_physic/pervoe/: main1.py
Python/lab14_physic/vtoroe/: main2.py
Python/lab2_physic/: main.py  main2.py
Python/lab3_physic/: main.py  main2.py
Python/lab4_physic/: main.py  main2.py
Python/lab8_physic/: main.py
Python/lab9_physic/: main.py
Verilog/2-Lab/: analytic.py  cache.dump  cache.sv  cpu.sv  hit_stat.dump  mem.dump  mem.sv  testbench.out  testbench.sv  Попович_Виталий_38_2.docx
c#/src/Lab1/: ResultRoute.cs  ResultTrain.cs  Train.cs
c#/src/Lab5/: Lab5.csproj
c#/tests/Lab1.Tests/: Test.cs
c#/tests/Lab2.Tests/: Test.cs
c#/tests/Lab3.Tests/: Test.cs
c#/tests/Lab4.Tests/: Test.cs
c#/tests/Lab5.Tests/: Lab5.Tests.csproj  Test.cs
cpp/LAB - DisAssembler/: Instruction.cpp  Instruction.h  InstructionFab.h  ParserOfElf.cpp  ParserOfElf.h  Storage.cpp  Storage.h  SymTabInfo.h  Type.h  main.cpp  Попович_Виталий_38_3.docx
cpp/LAB - DisAssembler/Instructions/: BType.cpp  BType.h  EType.h  IAddrType.cpp  IAddrType.h  IType.cpp  IType.h  JType.h  RType.cpp  RType.h  SType.cpp  SType.h  UType.h  (+1 more)
cpp/LAB - MULTIPROCESSING/: Lab.sln
cpp/LAB-10 - Scheduler/: CMakeLists.txt
cpp/LAB-11 - SimpleSearchEngine/: CMakeLists.txt  README.md
cpp/LAB-9 - Ranges/: CMakeLists.txt
cpp/LAB_1 - PrintFile/: README.md  main.cpp
cpp/LAB_2 - int2023_t/: README.md
cpp/LAB_3 - SandpileModel/: ArgumentsParser.cpp  ArgumentsParser.hpp  Bmp.cpp  Bmp.h  CMakeLists.txt  README.md  SandPile.cpp  SandPile.h  Structs.hpp  labwork3-VitPap.cpp  labwork3-VitPap.h
cpp/LAB_4 - ArgParser/: README.md
cpp/LAB_5 - Array/: CMakeLists.txt  README.md
cpp/LAB_6 - HamArc/: CMakeLists.txt  README.md  main.cpp
cpp/LAB_7 - Weather/: CMakeLists.txt  README.md  WeatherData.cpp  city.cpp  labwork7.cpp  labwork7.h
cpp/LAB_8 - BST/: CMakeLists.txt  README.md
cpp/Physic_LAB-1/: lab1.cpp  main.cpp
(+154 files in other folders)
